--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -51,13 +51,7 @@
         android:textSize="12sp"
         tools:text="-37s" />
 
-    <ImageView
-        android:id="@+id/image"
+    <VideoView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvBody"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_height="match_parent"/>
 </RelativeLayout>
