--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -52,6 +52,7 @@
         tools:text="-37s" />
 
     <VideoView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:id="@+id/vvTweetvideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
