--- a/app/src/main/res/layout/activity_detailed_tweet.xml
+++ b/app/src/main/res/layout/activity_detailed_tweet.xml
@@ -35,8 +35,8 @@
 
     <TextView
         android:id="@+id/tvBody"
-        android:layout_width="384dp"
-        android:layout_height="504dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvDate"
         android:layout_marginTop="7dp"
         android:autoLink="all"
@@ -55,4 +55,9 @@
         android:layout_marginEnd="194dp"
         android:textSize="12sp"
         tools:text="-37s" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvBody"
+        android:id="@+id/ivImg"/>
 </RelativeLayout>
