--- a/app/src/main/res/layout/video_tweet.xml
+++ b/app/src/main/res/layout/video_tweet.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:id="@+id/rvTweet"
->
+    android:id="@+id/rvVideo"
+    >
 
     <ImageView
         android:id="@+id/ivProfile"
@@ -51,6 +51,12 @@
         android:textSize="12sp"
         tools:text="-37s" />
 
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@+id/tvBody"
+        android:layout_centerInParent="true"
+        android:id="@+id/player"/>
 
 
 </RelativeLayout>
