--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -25,7 +25,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etCompose"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
         android:text="@string/tweet"
+        android:background="@color/twitter_blue"
         android:layout_alignParentEnd="true"
         />
+
+    <TextView
+        android:id="@+id/tvCharcount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etCompose"
+        android:layout_alignParentStart="true"
+        android:text="@string/char_count" />
 </RelativeLayout>
