--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -76,6 +76,16 @@
         android:layout_marginStart="25dp"
         android:layout_toEndOf="@+id/retweet"/>
 
+    <ImageButton
+        android:id="@+id/btnReply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:layout_below="@+id/tvBody"
+        android:layout_marginStart="25dp"
+        android:layout_toEndOf="@+id/like"
+        android:src="@drawable/ic_vector_compose"
+        />
 
 
 </RelativeLayout>
